// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot loaded 1`] = `
<DocumentFragment>
  <div>
    Test
  </div>
</DocumentFragment>
`;

exports[`matches snapshot loading 1`] = `
<DocumentFragment>
  <div>
    Loading...
  </div>
</DocumentFragment>
`;
